# pinentry-rofi

./: .gitignore  README.md  pinentry_rofi.py  pyproject.toml
tests/: test_pinentry.py
